--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -2,7 +2,7 @@
  <div id="map-canvas" style="width: 50%; height: 50%"></div>
 
 
-<div id="expose">  <form class="round" id="srch_map"  method="POST">
+<div id="expose">  <form class="round" id="srch_map" >
     <label for="zip">Type in your zip code!</label><input type="text" id="zip" name="zip" placeholder="Zip Code">
-    <input id="zip_srch" type="button" >
+    <input id="zip_srch" type="button" value="zip" >
   </form></div>
