--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -13,7 +13,7 @@
 
     
     // <script type="text/javascript"
-    //   src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAeDe9FlzrkXFDYA2pp4CZC3D-B_1knTJ8&sensor=false">
+    //   src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAeDe9FlzrkXFDYA2pp4CZC3D-B_1knTJ8&sensor=false&libraries=places">
     // </script>
    
 
