--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -4,6 +4,7 @@
 
 <div id="expose">  
   <form class="round" id="srch_map" >
-    <label for="zip">Type in your zip code!</label><input type="text" id="zip" name="zip" placeholder="Zip Code">
+    <label for="zip">Type in your zip code!</label><input type="text" id="zip" name="zip" placeholder="Zip Code"><br>
+    <label for="phrase">Tweet Search</label><input type="text" id="phrase" name="phrase" placeholder="What you are looking for?">
     <input id="zip_srch" type="button" value="zip" >
   </form></div>
