--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -25,6 +25,8 @@
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="/js/application.js"></script>
+  <script src="/js/us.js"></script>
+
 
 
 
