--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -10,13 +10,13 @@
 
 
 
-
+    
     
     <script type="text/javascript"
   src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAeDe9FlzrkXFDYA2pp4CZC3D-B_1knTJ8&sensor=false&libraries=places">
     // </script>
    
-
+<link href='http://fonts.googleapis.com/css?family=Playfair+Display:900italic' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="/css/normalize.css">
   <!--
     application.css is where you put your styles
