--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,8 +1,45 @@
+body {
+text-align: center;
+background-image: url('http://abs.twimg.com/images/themes/theme18/bg.gif');
+}
+
+h1{
+ font-family: 'Arial Black', sans-serif;
+line-height: 1em;
+color: #ffffff;
+font-style:italic;
+font-family: 'Playfair Display', serif;
+font-size: 90px;
+text-shadow:0px 0px 0 rgb(231,231,231),1px 1px 0 rgb(217,217,217),2px 2px 0 rgb(203,203,203),3px 3px 0 rgb(189,189,189),4px 4px 0 rgb(175,175,175),5px 5px 0 rgb(161,161,161),6px 6px 0 rgb(148,148,148),7px 7px 0 rgb(134,134,134),8px 8px 0 rgb(120,120,120),9px 9px 0 rgb(106,106,106),10px 10px 0 rgb(92,92,92),11px 11px 0 rgb(78,78,78),12px 12px 0 rgb(64,64,64),13px 13px 0 rgb(50,50,50), 14px 14px 0 rgb(36,36,36),15px 15px 14px rgba(0,0,0,0.2),15px 15px 1px rgba(0,0,0,0.5),0px 0px 14px rgba(0,0,0,.2);
+}
+
+.banner {
+padding: 1px 58px;
+margin: 0px auto;
+width: ;
+display: inline;
+display: inline-block;
+text-align: center;
+background: rgba(84, 84, 64, 0.2);
+border: solid black 5px;
+border: 4px solid black;
+border-radius: 21px;
+margin-top: 28px;
+}
+
 #map-canvas{
+  
+
   margin: 20px auto;
 
   border: 1px dotted black;
 }
+
+
+
+
+
+
 
 #expose{
   margin: 20px auto;
