--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,12 +1,14 @@
 <div class="banner">
-  <h1>Twitter Search</h1>
+  <h1>Creep'in Out</h1>
 </div> 
  <div id="map-canvas" style="width: 50%; height: 50%"></div>
 
 
 <div id="expose">  
   <form class="round" id="srch_map" >
-    <label for="zip">Type in your zip code!</label><input type="text" id="zip" name="zip" placeholder="Zip Code"><br>
+    <label for="zip">Type in your zip code!</label><input type="text" id="zip" name="zip" placeholder="Zip Code">
+    <input id="zip_srch" type="button"  value="relocate" >
+    <br>
     <label for="phrase">Tweet Search</label><input type="text" id="phrase" name="phrase" placeholder="What you are looking for?">
-    <input id="zip_srch" type="button" value="zip" >
+    <input id="find_tweets" type="button"  value="Creep!" >
   </form></div>
