css and active record sub

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,14 +1,14 @@
 <div class="banner">
-  <h1>Creep'in Out</h1>
+  <h1>Tweet Locator</h1>
 </div> 
- <div id="map-canvas" style="width: 50%; height: 50%"></div>
+ <div id="map-canvas" style="width: 80%; height: 50%"></div>
 
 
-<div id="expose">  
+<div id="expose"> 
   <form class="round" id="srch_map" >
     <label for="zip">Type in your zip code!</label><input type="text" id="zip" name="zip" placeholder="Zip Code">
-    <input id="zip_srch" type="button"  value="relocate" >
-    <br>
+    <input id="zip_srch" class="button" type="button"  value="relocate" >
     <label for="phrase">Tweet Search</label><input type="text" id="phrase" name="phrase" placeholder="What you are looking for?">
-    <input id="find_tweets" type="button"  value="Creep!" >
-  </form></div>
+    <input id="find_tweets" class="button" type="button"  value="Creep!" >
+  </form>
+</div>
