--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -6,30 +6,15 @@
       html { height: 100% }
       body { height: 100%; margin: 0; padding: 0 }
       #map-canvas { height: 100% }
-    </style>
-
-
-
-    
-    
-    <script type="text/javascript"
-  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAbGlZtfqLVOB-Q7f9baI_QIkg2lgfcm2k&sensor=false&libraries=places">
-    // </script>
-   
-<link href='http://fonts.googleapis.com/css?family=Playfair+Display:900italic' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="/css/normalize.css">
-  <!--
-    application.css is where you put your styles
-  -->
-  <link rel="stylesheet" href="/css/application.css">
-
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  <script src="/js/application.js"></script>
-  <script src="/js/us.js"></script>
-
-
-
-
+    </style>    
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAbGlZtfqLVOB-Q7f9baI_QIkg2lgfcm2k&sensor=false&libraries=places">
+    </script>
+    <link href='http://fonts.googleapis.com/css?family=Maven+Pro:700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="/css/normalize.css">
+    <link rel="stylesheet" href="/css/application.css">
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="/js/application.js"></script>
+    <script src="/js/us.js"></script>
   </head>
   <body>
   <%= yield %>
