--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,31 +1,34 @@
-body {
-text-align: center;
-background: rgb(255, 204, 71);
-color: white;
-font-family: 'Maven Pro', sans-serif;
+body 
+{
+  text-align: center;
+  background: rgb(255, 204, 71);
+  color: white;
+  font-family: 'Maven Pro', sans-serif;
 }
 
-h1{
- font-family: 'Arial Black', sans-serif;
-line-height: 1em;
-color: #ffffff;
-font-style:italic;
-font-size: 51px;
-font-family: 'Maven Pro', sans-serif;
-
+h1
+{
+  font-family: 'Arial Black', sans-serif;
+  line-height: 1em;
+  color: #ffffff;
+  font-style:italic;
+  font-size: 51px;
+  font-family: 'Maven Pro', sans-serif; d
 }
 
-.banner {
-padding: 1px 58px;
-width: 100%;
-display: inline;
-display: inline-block;
-text-align: left;
-background: rgb(255, 120, 144);
-border-color: rgb(28, 224, 224);
+.banner
+{
+  padding: 1px 58px;
+  width: 100%;
+  display: inline;
+  display: inline-block;
+  text-align: left;
+  background: rgb(255, 120, 144);
+  border-color: rgb(28, 224, 224);
 }
 
-#map-canvas{
+#map-canvas
+{
   margin: 20px auto;
   border: 6px solid rgb(33, 215, 215);
   border-radius: 72px;
@@ -34,7 +37,8 @@ border-color: rgb(28, 224, 224);
 
 
 
-input{
+input
+{
   border: solid 3px rgb(33, 215, 215);
   border-radius: 3px;
   margin-bottom: 16px;
@@ -43,20 +47,23 @@ input{
   width: 250px;
 }
 
-.button{
+.button
+{
   background: rgb(33, 215, 215);
 }
 
 
-input, label {
+input, label
+{
     display:block;
     margin-bottom:4px;
 }
-label{
+label
+{
   font-size:20px;
-  
 }
 
-th {
+th
+{
   text-align: left;
 }
