--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -14,7 +14,8 @@
     <link rel="stylesheet" href="/css/application.css">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="/js/application.js"></script>
-    <script src="/js/us.js"></script>
+    <script src="/js/box.js"></script>
+    <script src="/js/spot.js"></script>
   </head>
   <body>
   <%= yield %>
