objects are oriented

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -16,6 +16,7 @@
     <script src="/js/application.js"></script>
     <script src="/js/box.js"></script>
     <script src="/js/spot.js"></script>
+    <script src="/js/fetcher.js"></script>
   </head>
   <body>
   <%= yield %>
