--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -17,6 +17,7 @@
     <script src="/js/box.js"></script>
     <script src="/js/spot.js"></script>
     <script src="/js/fetcher.js"></script>
+    <script src="/js/map.js"></script>
   </head>
   <body>
   <%= yield %>
