Added global map var js

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,8 +1,15 @@
 <div class="banner">
   <h1>Tweet Locator</h1>
 </div> 
- <div id="map-canvas" style="width: 80%; height: 50%"></div>
-
+<div class="display">
+ <div id="map-canvas"></div>
+   <div id="profile">
+     <img class="profile-pic" src="http://pbs.twimg.com/profile_images/542278869265293312/vc7_mQvC.jpeg">
+     <h3 class="screenname">Van Joza</h3>
+     <div class="tweet"><p>Ignornance is hott</p></div>
+   </div>
+ </div>
+</div> 
 
 <div id="expose"> 
   <form class="round" id="srch_map" >
