--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -4,18 +4,18 @@
 <div class="display">
  <div id="map-canvas"></div>
    <div id="profile">
-     <img class="profile-pic" src="http://pbs.twimg.com/profile_images/542278869265293312/vc7_mQvC.jpeg">
+     <img class="profile-pic" src="https://pbs.twimg.com/profile_images/3221004065/743ee2b5082dc27ac647e8f3ee18a0f0_400x400.gif">
      <h3 class="screenname">Van Joza</h3>
      <div class="tweet"><p>Ignornance is hott</p></div>
    </div>
  </div>
-</div> 
 
-<div id="expose"> 
-  <form class="round" id="srch_map" >
-    <label for="zip">Type in your zip code!</label><input type="text" id="zip" name="zip" placeholder="Zip Code">
-    <input id="zip_srch" class="button" type="button"  value="relocate" >
-    <label for="phrase">Tweet Search</label><input type="text" id="phrase" name="phrase" placeholder="What you are looking for?">
-    <input id="find_tweets" class="button" type="button"  value="Creep!" >
-  </form>
-</div>
+  <div id="expose"> 
+    <form class="round" id="srch_map" >
+      <label for="zip">Type in your zip code!</label><input type="text" id="zip" name="zip" placeholder="Zip Code">
+      <input id="zip_srch" class="button" type="button"  value="relocate" >
+      <label for="phrase">Tweet Search</label><input type="text" id="phrase" name="phrase" placeholder="What you are looking for?">
+      <input id="find_tweets" class="button" type="button"  value="Creep!" >
+    </form>
+  </div>
+</div> 
