Added marker clearing

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -2,6 +2,7 @@
   <h1>Tweet Locator</h1>
 </div> 
 <div class="display">
+  <div id ="clear-tweet"><h2>Clear<br>Map</h2></div>
  <div id="map-canvas"></div>
    <div id="profile">
      <img class="profile-pic" src="https://pbs.twimg.com/profile_images/3221004065/743ee2b5082dc27ac647e8f3ee18a0f0_400x400.gif">
