Added Hot tweets

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -9,6 +9,20 @@
      <a href="https://twitter.com/crazyboutelvish/"><h3 class="screenname">Van Joza</h3></a>
      <div class="tweet"><p>Ignornance is hott</p></div>
    </div>
+  <div id="list">
+    <h1>Hottest Tweets</h1>
+    <ol>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+    <ol>
+  </div>
  </div>
 
   <div id="expose"> 
@@ -20,4 +34,3 @@
     </form>
   </div>
 </div> 
-<div><%= @hot %></div>
