--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -12,12 +12,17 @@
     <link href='http://fonts.googleapis.com/css?family=Maven+Pro:700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/css/normalize.css">
     <link rel="stylesheet" href="/css/application.css">
+    <link rel="stylesheet" href="/css/map-icons.css">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="/js/application.js"></script>
     <script src="/js/box.js"></script>
     <script src="/js/spot.js"></script>
     <script src="/js/fetcher.js"></script>
     <script src="/js/map.js"></script>
+    <script src="/js/map-icons-ie7.js"></script>
+    <script src="/js/map-icons.js"></script>
+    <script src="/js/map-icons.min.js"></script>
+    <li id="fire" meta="/images/1420351727_132117.ico"><li>
   </head>
   <body>
   <%= yield %>
