--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -6,7 +6,7 @@
  <div id="map-canvas"></div>
    <div id="profile">
      <img class="profile-pic" src="https://pbs.twimg.com/profile_images/3221004065/743ee2b5082dc27ac647e8f3ee18a0f0_400x400.gif">
-     <a href="https://twitter.com/crazyboutelvish/"><h3 class="screenname">Van Joza</h3></a>
+     <a id= "tweeter-page" href="https://twitter.com/crazyboutelvish/"><h3 class="screenname">Van Joza</h3></a>
      <div class="tweet"><p>Ignornance is hott</p></div>
    </div>
   <div id="list">
@@ -21,7 +21,8 @@
       <li></li>
       <li></li>
       <li></li>
-    <ol>
+      <li></li>
+    </ol>
   </div>
  </div>
 
