Major js refactor

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -18,6 +18,7 @@
     <script src="/js/spot.js"></script>
     <script src="/js/fetcher.js"></script>
     <script src="/js/map.js"></script>
+    <script src="/js/list.js"></script>
   </head>
   <body>
   <%= yield %>
