made map object literal

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -19,6 +19,7 @@
     <script src="/js/fetcher.js"></script>
     <script src="/js/map.js"></script>
     <script src="/js/list.js"></script>
+    <script src="/js/helper.js"></script>
   </head>
   <body>
   <%= yield %>
