--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -9,7 +9,7 @@
     </style>    
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAbGlZtfqLVOB-Q7f9baI_QIkg2lgfcm2k&sensor=false&libraries=places">
     </script>
-    <link href='http://fonts.googleapis.com/css?family=Maven+Pro:700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,600' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/css/normalize.css">
     <link rel="stylesheet" href="/css/application.css">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
