--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -26,7 +26,7 @@
   </div>
   <div id="expose"> 
     <form class="round" id="srch_map" >
-      <label for="zip">Type in your zip code!</label><input type="text" id="zip" name="zip" placeholder="Zip Code">
+      <label for="zip">Where would you like to search!</label><input type="text" id="zip" name="zip" placeholder="Zip Code">
       <input id="zip_srch" class="button" type="button"  value="relocate" >
       <label for="phrase">Tweet Search</label><input type="text" id="phrase" name="phrase" placeholder="What you are looking for?">
       <input id="find_tweets" class="button" type="button"  value="Search!" >
