--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -6,8 +6,8 @@
  <div id="map-canvas"></div>
    <div id="profile">
      <img class="profile-pic" src="https://pbs.twimg.com/profile_images/3221004065/743ee2b5082dc27ac647e8f3ee18a0f0_400x400.gif">
-     <a id= "tweeter-page" href="https://twitter.com/crazyboutelvish/"><h3 class="screenname">Van Joza</h3></a>
-     <div class="tweet"><p>Ignornance is hott</p></div>
+     <a id= "tweeter-page" href="https://twitter.com/crazyboutelvish/"><h3 class="screenname">twitter_username</h3></a>
+     <div class="tweet"><p>The Tweet itself. #getit?</p></div>
    </div>
   <div id="list">
     <h1>Hottest Tweets</h1>
