--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,27 +1,18 @@
 <div class="banner">
-  <h1>Tweet Locator</h1>
+  <h1>{{ "Tweet Locator" }}</h1>
 </div> 
 <div class="display">
  <div id ="clear-tweet"><h3>Clear<br>Map</h3></div>
  <div id="map-canvas"></div>
    <div id="profile">
-     <img class="profile-pic" src="https://pbs.twimg.com/profile_images/3221004065/743ee2b5082dc27ac647e8f3ee18a0f0_400x400.gif">
+     <img class="profile-pic" ng-src="{{list.tweets[0].image}}" ng-show="{{1}}"/>
      <a id= "tweeter-page" href="https://twitter.com/crazyboutelvish/"><h3 class="screenname">twitter_username</h3></a>
      <div class="tweet"><p>The Tweet itself. #getit?</p></div>
    </div>
   <div id="list">
     <h1>Hottest Tweets</h1>
     <ol>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
+      <li ng-repeat="tweet in list.tweets" ng-show="tweet.canShow" >{{tweet.name}}- {{tweet.tweet}} + {{tweet.price | currency}}</li>
     </ol>
   </div>
   <div id="expose"> 
@@ -32,13 +23,44 @@
       <input id="find_tweets" class="button" type="button"  value="Search!" >
     </form>
   </div>
-  <div id="directions"> 
+  <div id="directions" ng-controller="ItemController as item"> 
     <h2>Instructions</h2>
-    <p>1.To "relocate" the map window type the area code or name of the place where you would like to search for tweets in the first text box and click the relocate button. </p>
-    <p>2. Enter the word or words by which you would like to filter. (when entering multiple words twitter will search only for tweets containing all of the words submitted.)</p>
-    <p>3. click the "Search!" button to find your tweets!</p>
+    <p ng-class="{ highlight: item.isSet(1) }" ng-click="item.setItem(1)"> 1.To "relocate" the map window type the area code or name of the place where you would like to search for tweets in the first text box and click the relocate button. </p>
+    <p ng-class="{ highlight: item.isSet(2) }" ng-click="item.setItem(2)">2. Enter the word or words by which you would like to filter. (when entering multiple words twitter will search only for tweets containing all of the words submitted.)</p>
+    <p ng-class="{ highlight: item.isSet(3) }" ng-click="item.setItem(3)">3. click the "Search!" button to find your tweets!</p>
    </div>
- </div> 
+ </div>
+ <div ng-controller="FormController as form">
+   <ul>
+     <li ng-repeat="review in form.reviews">
+       {{review.stars}}
+       {{review.person}}
+       {{review.text}}
+       {{review.createdAt | date}}
+     </li>
+   </ul>
+   <form name="reviewForm" ng-submit="reviewForm.$valid && form.addReview(review)" novalidate>
+     <blockquote>
+       <strong>{{form.object.stars}} Stars</strong>
+       {{form.object.text}}
+       <cite class="clearfix">—{{form.object.person}}</cite>
+     </blockquote>
+     <fieldset>
+       <select ng-model="form.object.stars" ng-options="stars for stars in [5,4,3,2,1]" title="Stars" required>
+         <option value="">Rate the Product</option>
+       </select>
+     </fieldset>
+     <fieldset>
+       <input ng-model="form.object.text" />
+     </fieldset>
+     <fieldset>
+       <input ng-model="form.object.person" required/>
+     </fieldset>
+     <fieldset>
+       <input type="submit">
+     </fieldset>
+   </form>
+ </div>
    <div id="foot">
      
      <ul class="social">
