--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="tweetFinder">
   <head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <style type="text/css">
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="/css/normalize.css">
     <link rel="stylesheet" href="/css/application.css">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="/js/angular.js"></script>
     <script src="/js/application.js"></script>
     <script src="/js/box.js"></script>
     <script src="/js/spot.js"></script>
@@ -21,7 +22,7 @@
     <script src="/js/list.js"></script>
     <script src="/js/helper.js"></script>
   </head>
-  <body>
+  <body ng-controller="ListController as list">
   <%= yield %>
   </body>
 </html>
