--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -21,8 +21,9 @@
     <script src="/js/map.js"></script>
     <script src="/js/list.js"></script>
     <script src="/js/helper.js"></script>
+    <script src="/js/dep.js"></script>
   </head>
-  <body ng-controller="ListController as list">
+  <body>
   <%= yield %>
   </body>
 </html>
