--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -22,7 +22,6 @@
         <input ng-model="geo.search.place" type="text" id="zip" name="zip" placeholder="Zip Code">
         <input id="zip_srch" class="button" type="submit"  value="relocate" ng-submit="loadData()">
       </form>    
-
       <form class="round" id="srch_map" name="reviewForm" ng-submit="loadData()">
         <label for="phrase">Tweet Search</label>
           <input ng-model="geo.search.phrase" type="text" id="phrase" name="phrase" placeholder="What you are looking for?">
@@ -30,14 +29,10 @@
       </form>
     </div>
   </div>
-  <div id="directions" ng-controller="ItemController as item">
-    <h2>Instructions</h2>
-    <p ng-class="{ highlight: item.isSet(1) }" ng-click="item.setItem(1)"> 1.To "relocate" the map window type the area code or name of the place where you would like to search for tweets in the first text box and click the relocate button. </p>
-    <p ng-class="{ highlight: item.isSet(2) }" ng-click="item.setItem(2)">2. Enter the word or words by which you would like to filter. (when entering multiple words twitter will search only for tweets containing all of the words submitted.)</p>
-    <p ng-class="{ highlight: item.isSet(3) }" ng-click="item.setItem(3)">3. click the "Search!" button to find your tweets!</p>
+  <div id="directions">
+    <instructions>
+   </instructions>
    </div>
  </div>
-
-   <footer id="foot">
-
-   </footer>
+<footer id="foot">
+</footer>
