--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -14,7 +14,12 @@
     <link rel="stylesheet" href="/css/application.css">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="/js/angular.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.8/angular-route.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.8/angular-resource.js"></script>
     <script src="/js/application.js"></script>
+    <script src="/js/spot.js"></script>
+    
+    
     <script src="/js/box.js"></script>
     <script src="/js/helper.js"></script>
     <script src="/js/dep.js"></script>
