--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -6,7 +6,7 @@
    <div id ="clear-tweet" ng-click="geo.flush()"><h3>Clear<br>Map</h3></div>
    <div id="map-canvas"></div>
    <div id="profile" ng-style="data.style" >
-     <img class="profile-pic" ng-src="{{geo.featuredTweet.profile_image.replace('_normal', '')}}"/>
+     <img class="profile-pic" ng-src="{{geo.featuredTweet.profile_image.replace('_normal', '')}}" ng-show="geo.featuredTweet" />
      <a id= "tweeter-page" href="{{'https://twitter.com/' + geo.featuredTweet.user}}"><h3 class="screenname">{{geo.featuredTweet.user}}</h3></a>
      <div class="tweet"><p>{{geo.featuredTweet.text}}</p></div>
    </div>
