--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -5,7 +5,7 @@
  <div  ng-controller="MapController as geo">
    <div id ="clear-tweet" ng-click="geo.flush()"><h3>Clear<br>Map</h3></div>
    <div id="map-canvas"></div>
-   <div id="profile" ng-style="data.style" >
+   <div id="profile" ng-style="{'background':'transparent url(' + geo.featuredTweet.background_image + ')'}" ng-if="geo.featuredTweet" >
      <img class="profile-pic" ng-src="{{geo.featuredTweet.profile_image.replace('_normal', '')}}" ng-show="geo.featuredTweet" />
      <a id= "tweeter-page" href="{{'https://twitter.com/' + geo.featuredTweet.user}}"><h3 class="screenname">{{geo.featuredTweet.user}}</h3></a>
      <div class="tweet"><p>{{geo.featuredTweet.text}}</p></div>
