--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -18,11 +18,10 @@
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.8/angular-resource.js"></script>
     <script src="/js/application.js"></script>
     <script src="/js/spot.js"></script>
-    
-    
     <script src="/js/box.js"></script>
     <script src="/js/helper.js"></script>
     <script src="/js/dep.js"></script>
+    <script src="/js/factory.js"></script>
   </head>
   <body>
   <%= yield %>
