--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -10,13 +10,15 @@
      <a id= "tweeter-page" href="{{'https://twitter.com/' + geo.featuredTweet.user}}"><h3 class="screenname">{{geo.featuredTweet.user}}</h3></a>
      <div class="tweet"><p>{{geo.featuredTweet.text}}</p></div>
    </div>
-  <div id="list">
+  <div id="profile" ng-if="!geo.featuredTweet" ><h1 class="load">{{geo.loading}}</h1></div>
+  <div id="list" ng-if="geo.featuredTweet">
     <h1>Hottest Tweets</h1>
-      <ol>
-        <li ng-class="{'highlight': tweet == geo.featuredTweet}" ng-click="geo.changedFeatured(tweet)" ng-repeat="tweet in geo.tweets | limitTo: 10 " >{{tweet.user}}- {{tweet.text.trunc(17) + "..." }} {{tweet.retweet_count }}</li>
-      </ol>
+    <ol>
+      <li ng-class="{'highlight': tweet == geo.featuredTweet}" ng-click="geo.changedFeatured(tweet)" ng-repeat="tweet in geo.tweets | limitTo: 10 " >{{tweet.user}}- {{tweet.text.trunc(17) + "..." }} {{tweet.retweet_count }}</li>
+    </ol>
     </div>
-     <div id="expose">
+    <div id="list" ng-if="!geo.featuredTweet"><h1 class="load">{{geo.loading}}</h1></div>
+    <div id="expose">
       <form class="round" id="srch_map" name="reviewForm" ng-submit="geo.codeAddress()">
         <label for="zip">Where would you like to search!</label>
         <input ng-model="geo.search.place" type="text" id="zip" name="zip" placeholder="Zip Code">
