--- a/public/css/application.css
+++ b/public/css/application.css
@@ -103,6 +103,7 @@ li a
   width: 35%;
   float: left;
   box-shadow: 2px 2px 2px #21D7D7;
+  background: rgb(255, 120, 144);
   border: 6px solid rgb(33, 215, 215);
   border-radius: 72px;
   margin-top: 20px;
@@ -194,6 +195,11 @@ input
   margin-right: 0px;
   display: inline;
   
+}
+
+.load{
+  position: relative;
+  top: 30%;
 }
 
 .highlight
