--- a/public/css/application.css
+++ b/public/css/application.css
@@ -143,6 +143,18 @@ input
   border-radius: 19px;
 }
 
+.profile-pic2
+{
+  width: 350px;
+  margin-right: -69px;
+  height: auto;
+  margin-left: -62px;
+  max-height: 272px;
+  margin-top: 59px;
+  border: 6px solid rgb(33, 215, 215);
+  border-radius: 19px;
+}
+
 .tweet
 {
   margin-top: 54px;
@@ -205,14 +217,6 @@ input
 .highlight
 {
   color: #14FFFF;
-}
-
-.ng-invalid.ng-dirty {
-  border-color: red;
-}
-
-.ng-valid.ng-dirty {
-  border-color: green;
 }
 
 .social li
