--- a/public/partials/headline.html
+++ b/public/partials/headline.html
@@ -1,6 +1,7 @@
      
      <ul class="social">
        <li><a href="https://soundcloud.com/freezelapd"><img src="images/Soundcloud-white-round-64.png"></a></li>
-       <li><h3 class="jojo"><a>a jojo89 joint</a></h3></li>
+      </ul>
+      <ul class="social">
        <li><a href="https://github.com/jojo89"><img src="images/Github-64.png"></a></li>
      </ul> 
