--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,5 +1,9 @@
 <div class="banner">
-  <h1 id="locator">{{ "Tweet Locator" }}</h1><h4 class='joza'>burtofol.io</h4><img src="/images/743ee2b5082dc27ac647e8f3ee18a0f0_400x400.gif" class='me'>
+  <h1 id="locator">{{ "Tweet Locator" }}</h1>
+  <a href="http://burtfol.io/">
+    <h4 class='joza'>burtofol.io</h4>
+    <img src="/images/743ee2b5082dc27ac647e8f3ee18a0f0_400x400.gif" class='me'>
+  </a>
 </div> 
 <div class="display">
  <div  ng-controller="MapController as geo">
