--- a/public/css/application.css
+++ b/public/css/application.css
@@ -44,6 +44,9 @@ li a
   background: rgb(255, 120, 144);
   border-color: rgb(28, 224, 224);
 }
+.banner a{
+  color: white;
+}
 
 #list
 {
@@ -137,20 +140,28 @@ input
 }
 
 .me {
-max-height: 111px;
+  max-height: 111px;
+  float: right;
+  border-radius: 84px;
+  margin-top: 4px;
+  margin-right: -33px;
+  border: 1px solid rgb(33, 215, 215);
+}
+.i {
+max-height: 70px;
 float: right;
 border-radius: 84px;
-margin-top: 4px;
-margin-right: 19px;
-border: 1px solid rgb(33, 215, 215);
 }
 
 .joza {
   max-height: 111px;
-  font-size:20px;
+  font-size: 20px;
+  padding-left: 56px;
+  padding-right: 22px;
   float: right;
+  background: rgb(33, 215, 215);
   margin-top: 39px;
-  margin-right: 80px;
+  margin-right: 57px;
 }
 
 .profile-pic
