--- a/public/partials/headline.html
+++ b/public/partials/headline.html
@@ -1,7 +1,15 @@
-     
-     <ul class="social">
-       <li><a href="https://soundcloud.com/freezelapd"><img src="images/Soundcloud-white-round-64.png"></a></li>
-      </ul>
-      <ul class="social">
-       <li><a href="https://github.com/jojo89"><img src="images/Github-64.png"></a></li>
-     </ul> 
+<ul class="social">
+    <li>
+        <a href="https://soundcloud.com/freezelapd"><img src="images/Soundcloud-white-round-64.png">
+        </a>
+    </li>
+    <li>
+        <a href="http://burtfol.io/">
+            <img src="/images/743ee2b5082dc27ac647e8f3ee18a0f0_400x400.gif" class='i'>
+        </a>
+    </li>
+    <li>
+        <a href="https://github.com/jojo89"><img src="images/Github-64.png">
+        </a>
+    </li>
+</ul>
