--- a/public/css/application.css
+++ b/public/css/application.css
@@ -274,6 +274,7 @@ border-radius: 84px;
 input, label
 {
   display: block;
+  text-shadow: 1px 1px #FFFFFF;
   margin-bottom: 4px;
   color: black;
 }
