--- a/public/css/application.css
+++ b/public/css/application.css
@@ -3,6 +3,7 @@ body
   text-align: center;
   background: rgb(255, 225, 104);
   color: white;
+  text-shadow: 1px 1px #000000;
   font-family: Futura, 'Trebuchet MS', Arial, sans-serif;
 }
 
@@ -91,6 +92,7 @@ li a
   border: 6px solid rgb(33, 215, 215);
   border-radius: 72px;
   height: 89px;
+  text-shadow: 0px 0px #000000;
   color: black;
   background: rgb(255, 255, 255);
   z-index: 99;
@@ -192,6 +194,7 @@ border-radius: 84px;
 {
   margin-top: 54px;
   margin-left: 0px;
+  text-shadow: 1px 1px #000000;
   border-radius: 23px;
   background: rgba(0, 0, 0, 0.6);
   padding: 2px;
@@ -221,6 +224,7 @@ border-radius: 84px;
 .screenname
 {
   box-shadow: 2px 2px 2px #21D7D7;
+  text-shadow: 1px 1px #000000;
   border-radius: 6px;
   float: right;
   color: white;
