--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -9,27 +9,27 @@
  <div  ng-controller="MapController as geo">
    <div id ="clear-tweet" ng-click="geo.flush()"><h3><a href="javascript:void(0)">Clear<br>Map<a/></h3></div>
    <div id="map-canvas"></div>
-   <div id="profile" ng-style="{'background':'transparent url(' + geo.featuredTweet.background_image + ')'}" ng-if="geo.featuredTweet" >
-     <img class="profile-pic" ng-src="{{geo.featuredTweet.profile_image.replace('_normal', '')}}" ng-show="geo.featuredTweet" />
-     <a id= "tweeter-page" href="{{'https://twitter.com/' + geo.featuredTweet.user}}"><h3 class="screenname">{{geo.featuredTweet.user}}</h3></a>
-     <div class="tweet"><p>{{geo.featuredTweet.text}}</p></div>
+   <div id="profile" ng-style="{'background':'transparent url(' + featuredTweet.background_image + ')'}" ng-if="featuredTweet" >
+     <img class="profile-pic" ng-src="{{featuredTweet.profile_image.replace('_normal', '')}}" ng-show="featuredTweet" />
+     <a id= "tweeter-page" href="{{'https://twitter.com/' + featuredTweet.user}}"><h3 class="screenname">{{featuredTweet.user}}</h3></a>
+     <div class="tweet"><p>{{featuredTweet.text}}</p></div>
    </div>
-  <div id="profile" ng-if="!geo.featuredTweet" >
-    <img class="profile-pic2" ng-src="{{geo.noTweetImage}}" ng-show="geo.noTweetImage" />
+  <div id="profile" ng-if="!featuredTweet" >
+    <img class="profile-pic2" ng-src="{{noTweetImage}}" ng-show="noTweetImage" />
   </div>
-  <div id="list" ng-if="geo.featuredTweet">
+  <div id="list" ng-if="featuredTweet">
     <h1>Hottest Tweets</h1>
     <ol>
-      <li ng-class="{'highlight': tweet == geo.featuredTweet}" ng-click="geo.changedFeatured(tweet)" ng-repeat="tweet in geo.tweets | limitTo: 10 " ><a href="javascript:void(0)">{{tweet.user}}- {{tweet.text.trunc(17) + "..." }} {{tweet.retweet_count }}</a></li>
+      <li ng-class="{'highlight': tweet == featuredTweet}" ng-click="geo.changedFeatured(tweet)" ng-repeat="tweet in tweets | limitTo: 10 " ><a href="javascript:void(0)">{{tweet.user}}- {{tweet.text.trunc(17) + "..." }} {{tweet.retweet_count }}</a></li>
     </ol>
     </div>
-    <div id="list" ng-if="!geo.featuredTweet"><h1 class="load">{{geo.loading}}</h1></div>
+    <div id="list" ng-if="!featuredTweet"><h1 class="load">{{loading}}</h1></div>
     <div id="expose">
       <form class="round" id="srch_map" name="reviewForm" ng-submit="loadData();">
           <label for="zip">Where would you like to search!</label>
-          <input ng-model="geo.search.place" type="text" id="zip" name="zip" placeholder="Zip Code">
+          <input ng-model="search.place" type="text" id="zip" name="zip" placeholder="Zip Code">
           <label for="phrase">Key Words</label>
-          <input ng-model="geo.search.phrase" type="text" id="phrase" name="phrase" placeholder="What you are looking for?">
+          <input ng-model="search.phrase" type="text" id="phrase" name="phrase" placeholder="What you are looking for?">
           <input id="find_tweets" class="button" type="submit"  value="Search!" >
       </form>
     </div>
