minor copy change

--- a/public/partials/instructions.html
+++ b/public/partials/instructions.html
@@ -1,4 +1,4 @@
     <h2>Instructions</h2>
-    <p ng-class="{ highlight: item.isSet(1) }" ng-click="item.setItem(1)"> 1.To "relocate" the map window type the area code or name of the place where you would like to search for tweets in the first text box and click the relocate button. </p>
-    <p ng-class="{ highlight: item.isSet(2) }" ng-click="item.setItem(2)">2. Enter the word or words by which you would like to filter. (when entering multiple words twitter will search only for tweets containing all of the words submitted.)</p>
-    <p ng-class="{ highlight: item.isSet(3) }" ng-click="item.setItem(3)">3. click the "Search!" button to find your tweets!</p>
+    <p ng-class="{ highlight: item.isSet(1) }" ng-click="item.setItem(1)">1. Enter the area code or name of the place where you would like to search for tweets in the first text box. </p>
+    <p ng-class="{ highlight: item.isSet(2) }" ng-click="item.setItem(2)">2. Next, enter the word or words by which you would like to filter. (when entering multiple words twitter will search only for tweets containing all of the words submitted.)</p>
+    <p ng-class="{ highlight: item.isSet(3) }" ng-click="item.setItem(3)">3. Then, Click the "Search!" button to find your tweets!</p>
